Change disabled icon and label colors to be fitted to the spec.

The color of disabled icons are different from the inactive ones.
Disabled means the function is not available, whereas inactive means
the toggle state is turned to OFF.

Bug: 853695,875459
Change-Id: I0f4115483f5477720e65b7a0d25c7f5f79a184e5
Reviewed-on: https://chromium-review.googlesource.com/1181015
Reviewed-by: Yoshiki Iguchi <yoshiki@chromium.org>
Reviewed-by: Tetsui Ohkubo <tetsui@chromium.org>
Commit-Queue: Tatsuhisa Yamaguchi <yamaguchi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#584993}
Former-commit-id: 847cde68d187bdb50046fd1c7e0153d87e568b1d